# tmux-status

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install.sh  uninstall.sh
.forge/: COMPLETION.md  DEPLOY-APPROVAL.md  DESIGN.md  DOCUMENTATION.md  IDEA.md  PLAN.md  REVIEW-REPORT.md  TEAM.md  TRIAGE.md  VALIDATE-REPORT.md  config.json  lock.json  plan-mapping.json  state.json  verdicts.jsonl
.forge/handoffs/: handoff-decompose.md  handoff-design.md  handoff-document.md  handoff-escalate-review.md  handoff-execute.md  handoff-interrogate.md  handoff-plan.md  handoff-qa.md  handoff-research.md  handoff-review.md  handoff-triage.md  handoff-validate.md
.forge/research/: SUMMARY.md  client-caching-patterns.md  packaging-deployment.md  python-http-servers.md
.semver/: config.yaml
.storyhook/: .gitignore  CLAUDE.md  project.toml  states.toml  types.toml
.storyhook/archive/: archive.db
config/: settings.example.conf  windows.example.json
overlay/: status.conf
scripts/: tmux-claude-status  tmux-git-status  tmux-status-apply-config  tmux-status-context-hook.js  tmux-status-quota-fetch  tmux-status-quota-poll  tmux-status-session
server/: Dockerfile  pyproject.toml
server/deploy/: io.mikey.tmux-status-server.plist  tmux-status-server.service
server/tests/: polyglot_extract.py  test_config.py  test_deploy.py  test_package.py  test_polyglot_extract.py  test_scraper.py  test_server.py  test_validate_cycle3.py  test_validate_cycle5.py  test_validate_gaps.py
server/tmux_status_server/: __main__.py  config.py  scraper.py  server.py
(+58 files in other folders)
