[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-status-server"
version = "0.1.0"
description = "Scrape claude.ai for quota data and serve via HTTP REST API"
requires-python = ">=3.10"
dependencies = [
    "bottle>=0.12.25",
    "curl_cffi>=0.5",
]

[tool.setuptools.packages.find]
include = ["tmux_status_server*"]

[project.scripts]
tmux-status-server = "tmux_status_server.__main__:main"
